# risk-advisor-backend

./: .env.example  README.md  pyproject.toml
app/: main.py
app/config/: __init__.py  database.py  settings.py
app/middlewares/: error_handler.py  logging_middleware.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  alertas.py  conductores.py  lecturas.py  viajes.py
app/schemas/: __init__.py  schemas.py
app/seeds/: seed_data.py
app/services/: __init__.py  alerta_detector.py  services.py
app/utils/: create_tables.py
