[tool.poetry]
name = "riskadvisor"
version = "0.1.0"
description = "Application that will serve as a middleware and API for the Artificial Intelligence project"
authors = ["Adriel Rodriguez"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.119.0,<0.120.0"
uvicorn = ">=0.38.0,<0.39.0"
bcrypt = ">=5.0.0,<6.0.0"
pyjwt = ">=2.10.1,<3.0.0"
pydantic = ">=2.12.3,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
psycopg2-binary = ">=2.9.9,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
